Black vertex colors in sculpt mode #67437

Closed
opened 2019-07-22 11:20:46 +02:00 by Julien Kaspar · 13 comments
Member

System Information
Operating system: Linux-4.13.0-46-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 384.130

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-21 10:59, hash: blender/blender@45ae9edbd5

Short description of error
When entering sculpt mode on an object with vertex colors and using vertex colors for the viewport shading, the object turns black.

Exact steps for others to reproduce the error

  • Create a new object
  • Add vertex colors
  • Switch to "Vertex" in the shading options in the header
  • Enter sculpt mode

Screenshot_2019-07-22_11-19-31.png

**System Information** Operating system: Linux-4.13.0-46-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 384.130 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-21 10:59, hash: `blender/blender@45ae9edbd5` **Short description of error** When entering sculpt mode on an object with vertex colors and using vertex colors for the viewport shading, the object turns black. **Exact steps for others to reproduce the error** - Create a new object - Add vertex colors - Switch to "Vertex" in the shading options in the header - Enter sculpt mode ![Screenshot_2019-07-22_11-19-31.png](https://archive.blender.org/developer/F7622809/Screenshot_2019-07-22_11-19-31.png)

blender/blender#67798 was marked as duplicate of this issue

blender/blender#67798 was marked as duplicate of this issue
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

I have an old build from 2019-06-24 and vertex colors are working in Sculpt Mode. If I save file in old build and open it in latest 2019-07-22 and switch to Sculpt mode it turns black so it looks like something was changed between 24.06 and 22.07

I have an old build from 2019-06-24 and vertex colors are working in Sculpt Mode. If I save file in old build and open it in latest 2019-07-22 and switch to Sculpt mode it turns black so it looks like something was changed between 24.06 and 22.07

This issue was referenced by blender/blender@08717f4a2c

This issue was referenced by blender/blender@08717f4a2c3c17bf800b0612daf4ef5c797a0f94
Jeroen Bakker self-assigned this 2019-07-23 08:35:06 +02:00

blender/blender@1715c396e4 introduced the issue.
Seems like the shader parameters were renamed, but change was not done for sculptdrawing.

blender/blender@1715c396e4 introduced the issue. Seems like the shader parameters were renamed, but change was not done for sculptdrawing.

Added subscriber: @Vis

Added subscriber: @Vis

Tested latest 1178046ed222 from 2019-07-29 and vertex colors and textures are still not working in Workbench Sculpt Mode on Windows. As far as I can see there is a fix for the problem but the problem is still there, am I missing something?

Tested latest 1178046ed222 from 2019-07-29 and vertex colors and textures are still not working in Workbench Sculpt Mode on Windows. As far as I can see there is a fix for the problem but the problem is still there, am I missing something?

Added subscriber: @brecht

Added subscriber: @brecht

There is a fix but it has not been committed yet. If the bug report is still open it means there is no fix in the builds.

There is a fix but it has not been committed yet. If the bug report is still open it means there is no fix in the builds.

Added subscriber: @franMarz

Added subscriber: @franMarz

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#67437
No description provided.